--- a/claw.tt
+++ b/claw.tt
@@ -369,3 +369,4 @@
 /ac {^  %1(chipped sapphire)(LV1)}{get chipped sapphire;l}
 /ac {^  %1(flawless sapphire)(LV}{get flawless sapphire;l}
 /ac {^  %1(chipped topaz)(LV}{get chipped topaz;l}
+/al wh {xixi}
