--- a/demo.tt
+++ b/demo.tt
@@ -68,3 +68,4 @@
 /ac {^然而，%0已经死了}{j}
 /al kb {ki bandit;/delay {2}{do kill bandit 2,kill bandit 3,kill bandit 4,kill bandit leader}}
 /al peng {wi sword;do enable sword yuenv-jian,perform pengxin,enable sword demosword}
+/al wh {xixi}
