--- a/maoer.tt
+++ b/maoer.tt
@@ -9,6 +9,7 @@
 /read comm/gag.sc
 /nop read comm/ntpot_diaoyu.sc
 /read comm/normal.sc
+/config {MCCP}     {on}
 /read comm/path.sc
 /read comm/quest.sc
 /read comm/autorecover_hc.sc
@@ -16,8 +17,9 @@
 /nop read comm/fb_forest.tt
 /al buff {exert powerup}
 /al ki {wh;buff;do unwield sleepbag,wield sleepbag,wield zhufu sword;set target %0;/delay {2}{wpet;gongji %0;startk;/delay {2.2}{kill %0}}}
+/al ki {kill %0;startk}
 /al pk {performp tianwaifeixian}
-/al startk {/ticker {kill}{pk}{6}}
+/al startk {/ticker {kill}{k}{6}}
 /ac {^你纵身越到了}{iskill;peng}
 /al fy2zt fy2ztv
 /var petname xjx
@@ -68,3 +70,7 @@
 /ac {^然而，%0已经死了}{j}
 /al kb {ki bandit;/delay {2}{do kill bandit 2,kill bandit 3,kill bandit 4,kill bandit leader}}
 /al peng {wi sword;do enable sword yuenv-jian,perform pengxin,enable sword demosword}
+/al peng {k}
+/ac {^五阴焚灭只能对战斗中的对手使用}{sk}
+/ac {^『%0』(scroll)}{x scroll;de2 lc} 
+/ac {^阳关三叠只能对战}{sk}
