--- a/demo.tt
+++ b/demo.tt
@@ -13,11 +13,14 @@
 /read comm/quest.sc
 /read comm/autorecover_hc.sc
 /read comm/status.sc
+/read comm/debuff.sc
 /nop read comm/fb_forest.tt
 /al buff {exert powerup}
-/al ki {wh;buff;do unwield sleepbag,wield sleepbag,wield zhufu sword;set target %0;/delay {2}{wpet;gongji %0;startk;/delay {2.2}{kill %0}}}
+/al ki {wh;buff;do unwield sleepbag,wield sleepbag,wield zhufu sword;set target %0;
+        /var target %0;
+        /delay {2}{wpet;gongji %0;startk;/delay {2.2}{kill %0}}}
 /al pk {performp tianwaifeixian}
-/al startk {/ticker {kill}{pk}{6}}
+/al startk {/ticker {kill}{pk;wh}{4.1}}
 /ac {^你纵身越到了}{iskill;peng}
 /al fy2zt fy2ztv
 /var petname xjx
@@ -65,9 +68,14 @@
         }
 /al sk {stopk;cks}
 /ac {^『诛天剑阵』只能对战}{sk}
-/ac {^然而，%0已经死了}{j}
+/ac {^然而，%1已经死了}{de2 q}
+/ac {^『棋盘切』只能对战}{sk}
+/ac {^「西子捧心」只能在战}{sk}
 /al kb {ki bandit;/delay {2}{do kill bandit 2,kill bandit 3,kill bandit 4,kill bandit leader}}
 /al peng {wi sword;do enable sword yuenv-jian,perform pengxin,enable sword demosword}
 /al checkkill {perform blade.gobankiri}
 /al q checkkill
-/ac {^然而，%1已经死了}{cks;/if {$is_kill==1}{checkkill}}
+/ac {^你现在不可以吹口哨。}{}
+/ac {^你对%1一指，对小九邪命令}{kill $target}
+/ac {^  小九邪的尸体(Corpse)}{wh}{4}
+/ac {^你轻轻地吹了声口哨。}{/if {$is_kill==1}{de1 {wpet;gongji $target}}}
