--- a/wandao.tt
+++ b/wandao.tt
@@ -122,7 +122,6 @@
 /ac {^小小刀纵身越到了}{pk}
 /nop ------------
 /al ps {/showme  === auto pf ===}
-/ac {^你轻轻地吹了声口哨。}{/if {$is_kill==1}{gongji $target;kill $target}}
 /al startk {
         /ticker {kill}{
             pj;
@@ -349,4 +348,5 @@
 /ac {^星芒流绕在}{pjj;qx}
 /ac {^你现在不可以吹口哨。}{}
 /ac {^你对%1一指，对小弯刀命令}{kill $target}
-/ac {^  小弯刀的尸体(Corpse)}{hpp;wpet}{4}
+/ac {^  小弯刀的尸体(Corpse)}{wh}{4}
+/ac {^你轻轻地吹了声口哨。}{/if {$is_kill==1}{de1 {wpet;gongji $target}}}
