--- a/wandao.tt
+++ b/wandao.tt
@@ -348,7 +348,7 @@
 /ac {^『风漏飞烟』至少需要6枚暗器。}{take 8 1000;de3 wianqi}
 /ac {^星芒流绕在}{pjj;qx}
 /ac {^你现在不可以吹口哨。}{}
-/ac {^你对%1一指，对小弯刀命令}{kill $target}
+/ac {^你对%1一指，对小弯刀命令}{/if {$is_kill==0}{de1 {kill $target}}}
 /ac {^  小弯刀的尸体(Corpse)}{wh}{4}
 /ac {^你轻轻地吹了声口哨。}{/if {$is_kill==1}{de1 {wpet;gongji $target}}}
 /al hj jmj
